fix: :bug: Improve paragraph readability

--- a/src/app.css
+++ b/src/app.css
@@ -63,7 +63,7 @@
 	}
 
 	p {
-		@apply font-extralight;
+		@apply font-light;
 	}
 }
 
